Fix visual scrolling on mobile for Projects, updated Resume, and overall heights

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,7 @@ html {
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
     background-color: black;
+    height: 100%;
+    overflow: scroll;
+    overscroll-behavior-y: none;
 }
